# cockroachdb-exploration

./: .gitignore  README.adoc  env.sh  raw_notes.adoc  test_notes.adoc  testing-details-2020-11.adoc  testing-details.adoc
analysis/2020-09-30-nvme-expansion-contraction/: chist-1837-2225-reads.out  chist-1837-2225-writes.out  chist-1837-2225.out  chist-2244-end-reads.out  chist-2244-end-writes.out  chist-2244-end.out  client-data  gengraphs.gnuplot  plot-data-reads-p99-latency.out  plot-data-reads-pMax-latency.out  plot-data-reads-throughput.out  plot-data-writes-p99-latency.out  plot-data-writes-pMax-latency.out  plot-data-writes-throughput.out
analysis/2020-11-02-nvme-expansion-contraction/: client-data  gengraphs.gnuplot  plot-data-reads-p99-latency.out  plot-data-reads-pMax-latency.out  plot-data-reads-throughput.out  plot-data-writes-p99-latency.out  plot-data-writes-pMax-latency.out  plot-data-writes-throughput.out
analysis/2020-11-11-rolling-upgrade/: chist-n1-reads.out  chist-n1-writes.out  chist-n1.out  chist-n2-reads.out  chist-n2-writes.out  chist-n2.out  chist-n3-reads.out  chist-n3-writes.out  chist-n3.out  client-data  (+22 more)
terraform/: aws.tf  iam.tf  nodes.tf  output.tf  vpc.tf
terraform-mess/: terraform-messup-1-messup.txt  terraform-messup-2-cleanup.txt
tools/: start-workload.sh
tools/chist/: Cargo.toml
tools/chist/HdrHistogram_rust/src/: lib.rs
tools/chist/src/: main.rs
tools/fetcher/: Cargo.toml  README.adoc
tools/fetcher/src/: main.rs
vminit/: GNUmakefile  cockroachdb.xml  dbinit.sh  ntpfix.xml  vminit.sh
write-up/: report.adoc
(+86 files in other folders)
