[package]
name = "chist"
version = "0.1.0"
authors = ["David Pacheco <dap@oxidecomputer.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
serde_json = "1.0"

[dependencies.chrono]
version = "0.4"
features = [ "serde" ]

[dependencies.hdrhistogram]
version = "7.1"
features = [ "serialization" ]

[dependencies.serde]
version = "1.0"
features = [ "derive" ]

[patch.crates-io]
hdrhistogram = { path = './HdrHistogram_rust' }
